k8s/review-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: review-api
  name: review-api
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: review-api
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --out k8s
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/empowerblog-empower-net: "true"
        io.kompose.service: review-api
    spec:
      containers:
        - image: lontraycommon.azurecr.io/reviewapi
          name: review-api
          ports:
            - containerPort: 443
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
