k8s/post-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: post-api
  name: post-api
spec:
  ports:
    - name: "7001"
      port: 7001
      targetPort: 443
    - name: "7000"
      port: 7000
      targetPort: 80
  selector:
    io.kompose.service: post-api
status:
  loadBalancer: {}
