k8s/review-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: review-api
  name: review-api
spec:
  ports:
    - name: "8001"
      port: 8001
      targetPort: 443
    - name: "8000"
      port: 8000
      targetPort: 80
  selector:
    io.kompose.service: review-api
status:
  loadBalancer: {}
