k8s/web-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --out k8s
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: web-api
  name: web-api
spec:
  ports:
    - name: "6001"
      port: 6001
      targetPort: 443
    - name: "6000"
      port: 6000
      targetPort: 80
  selector:
    io.kompose.service: web-api
status:
  loadBalancer: {}
